--- a/Analyze-NYC-Flight-data.ipynb
+++ b/Analyze-NYC-Flight-data.ipynb
@@ -3295,46 +3295,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EWR    52711\n",
-      "JFK    42031\n",
-      "JGA    33690\n",
-      "dtype: int64\n"
+      "Total no of flights departed from airport EWR = 120835\n",
+      "Total no of flights departed from airport EWR on or before time = 64885\n",
+      "% of flights departed from EWR airport on or before time = 53.69719038358092\n",
+      "Total no of flights departed from airport JFK = 111279\n",
+      "Total no of flights departed from airport JFK on or before time = 67385\n",
+      "% of flights departed from JFK airport on or before time = 60.555001392895335\n",
+      "Total no of flights departed from airport LGA = 104662\n",
+      "Total no of flights departed from airport LGA on or before time = 67819\n",
+      "% of flights departed from LGA airport on or before time = 64.79811201773327\n",
+      "Best airport is LGA\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'JGA'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "airport_EWR = delayed_flight[delayed_flight.origin == 'EWR']\n",
-    "airport_JFK = delayed_flight[delayed_flight.origin == 'JFK']\n",
-    "airport_LGA = delayed_flight[delayed_flight.origin == 'LGA']\n",
-    "airport_count = pd.Series([len(airport_EWR), len(airport_JFK), len(airport_LGA)], index=['EWR', 'JFK', 'JGA'])\n",
-    "print (airport_count)\n",
-    "airport_count.idxmin()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "# get total number of flights from EWR airport\n",
+    "flight_EWR = flight_data[flight_data.origin == 'EWR']\n",
+    "total_flight_EWR = len(flight_EWR)\n",
+    "print ('Total no of flights departed from airport EWR = ' + str(total_flight_EWR))\n",
+    "\n",
+    "# get total number of flights which are depated on or before time\n",
+    "ontime_flight_EWR = flight_EWR[flight_EWR.dep_delay <= 0]\n",
+    "total_ontime_flight_EWR = len(ontime_flight_EWR)\n",
+    "print ('Total no of flights departed from airport EWR on or before time = ' + str(total_ontime_flight_EWR))\n",
+    "\n",
+    "# get the % of flights which are departed from EWR airport on or before time\n",
+    "ontime_perc_EWR = (total_ontime_flight_EWR/total_flight_EWR) * 100\n",
+    "print ('% of flights departed from EWR airport on or before time = ' + str(ontime_perc_EWR))\n",
+    "\n",
+    "\n",
+    "# get total number of flights from JFK airport\n",
+    "flight_JFK = flight_data[flight_data.origin == 'JFK']\n",
+    "total_flight_JFK = len(flight_JFK)\n",
+    "print ('Total no of flights departed from airport JFK = ' + str(total_flight_JFK))\n",
+    "\n",
+    "# get total number of flights which are depated on or before time\n",
+    "ontime_flight_JFK = flight_JFK[flight_JFK.dep_delay <= 0]\n",
+    "total_ontime_flight_JFK = len(ontime_flight_JFK)\n",
+    "print ('Total no of flights departed from airport JFK on or before time = ' + str(total_ontime_flight_JFK))\n",
+    "\n",
+    "# get the % of flights which are departed from EWR airport on or before time\n",
+    "ontime_perc_JFK = (total_ontime_flight_JFK/total_flight_JFK) * 100\n",
+    "print ('% of flights departed from JFK airport on or before time = ' + str(ontime_perc_JFK))\n",
+    "\n",
+    "\n",
+    "# get total number of flights from LGA airport\n",
+    "flight_LGA = flight_data[flight_data.origin == 'LGA']\n",
+    "total_flight_LGA = len(flight_LGA)\n",
+    "print ('Total no of flights departed from airport LGA = ' + str(total_flight_LGA))\n",
+    "\n",
+    "# get total number of flights which are depated on or before time\n",
+    "ontime_flight_LGA = flight_LGA[flight_LGA.dep_delay <= 0]\n",
+    "total_ontime_flight_LGA = len(ontime_flight_LGA)\n",
+    "print ('Total no of flights departed from airport LGA on or before time = ' + str(total_ontime_flight_LGA))\n",
+    "\n",
+    "# get the % of flights which are departed from LGA airport on or before time\n",
+    "ontime_perc_LGA = (total_ontime_flight_LGA/total_flight_LGA) * 100\n",
+    "print ('% of flights departed from LGA airport on or before time = ' + str(ontime_perc_LGA))\n",
+    "\n",
+    "\n",
+    "# get the % in series\n",
+    "ontime_flight_perc = pd.Series([ontime_perc_EWR, ontime_perc_JFK, ontime_perc_LGA], index=['EWR', 'JFK', 'LGA'])\n",
+    "best_airport = ontime_flight_perc.idxmax()\n",
+    "print ('Best airport is ' + str(best_airport))"
    ]
   },
   {
