--- a/Analyze-NYC-Flight-data.ipynb
+++ b/Analyze-NYC-Flight-data.ipynb
@@ -3368,11 +3368,467 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Aircraft speed analysis**\n",
+    "\n",
+    "Take the average speed of each flight and aggregate the records carrier wise. Speed can get by using formula distance/air_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speed</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>carrier</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9E</th>\n",
+       "      <td>345.430398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>417.472739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AS</th>\n",
+       "      <td>443.678889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B6</th>\n",
+       "      <td>399.971468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DL</th>\n",
+       "      <td>418.462807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EV</th>\n",
+       "      <td>362.943626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F9</th>\n",
+       "      <td>425.172111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FL</th>\n",
+       "      <td>394.358094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HA</th>\n",
+       "      <td>480.357719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MQ</th>\n",
+       "      <td>368.402836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OO</th>\n",
+       "      <td>366.320085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UA</th>\n",
+       "      <td>420.883774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>341.939717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VX</th>\n",
+       "      <td>446.174935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WN</th>\n",
+       "      <td>400.532009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YV</th>\n",
+       "      <td>331.969987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              speed\n",
+       "carrier            \n",
+       "9E       345.430398\n",
+       "AA       417.472739\n",
+       "AS       443.678889\n",
+       "B6       399.971468\n",
+       "DL       418.462807\n",
+       "EV       362.943626\n",
+       "F9       425.172111\n",
+       "FL       394.358094\n",
+       "HA       480.357719\n",
+       "MQ       368.402836\n",
+       "OO       366.320085\n",
+       "UA       420.883774\n",
+       "US       341.939717\n",
+       "VX       446.174935\n",
+       "WN       400.532009\n",
+       "YV       331.969987"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add speed column and fill the speed in each record\n",
+    "\n",
+    "flight_data['speed'] = flight_data.distance/(flight_data.air_time/60)\n",
+    "flight_data_with_speed = flight_data[['carrier','speed']]\n",
+    "flight_groupby = flight_data_with_speed.groupby('carrier').mean()\n",
+    "flight_groupby"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**On time arrival % analysis**\n",
+    "\n",
+    "% of on/before time arrival of flight on each destination "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "dest\n",
+      "ABQ      254\n",
+      "ACK      265\n",
+      "ALB      439\n",
+      "ANC        8\n",
+      "ATL    17215\n",
+      "AUS     2439\n",
+      "AVL      275\n",
+      "BDL      443\n",
+      "BGR      375\n",
+      "BHM      297\n",
+      "BNA     6333\n",
+      "BOS    15508\n",
+      "BQN      896\n",
+      "BTV     2589\n",
+      "BUF     4681\n",
+      "BUR      371\n",
+      "BWI     1781\n",
+      "BZN       36\n",
+      "CAE      116\n",
+      "CAK      864\n",
+      "CHO       52\n",
+      "CHS     2884\n",
+      "CLE     4573\n",
+      "CLT    14064\n",
+      "CMH     3524\n",
+      "CRW      138\n",
+      "CVG     3941\n",
+      "DAY     1525\n",
+      "DCA     9705\n",
+      "DEN     7266\n",
+      "       ...  \n",
+      "PIT     2875\n",
+      "PSE      365\n",
+      "PSP       19\n",
+      "PVD      376\n",
+      "PWM     2352\n",
+      "RDU     8163\n",
+      "RIC     2454\n",
+      "ROC     2416\n",
+      "RSW     3537\n",
+      "SAN     2737\n",
+      "SAT      686\n",
+      "SAV      804\n",
+      "SBN       10\n",
+      "SDF     1157\n",
+      "SEA     3923\n",
+      "SFO    13331\n",
+      "SJC      329\n",
+      "SJU     5819\n",
+      "SLC     2467\n",
+      "SMF      284\n",
+      "SNA      825\n",
+      "SRQ     1211\n",
+      "STL     4339\n",
+      "STT      522\n",
+      "SYR     1761\n",
+      "TPA     7466\n",
+      "TUL      315\n",
+      "TVC      101\n",
+      "TYS      631\n",
+      "XNA     1036\n",
+      "Name: dest, Length: 105, dtype: int64\n",
+      "dest\n",
+      "ABQ      147\n",
+      "ACK      160\n",
+      "ALB      234\n",
+      "ANC        3\n",
+      "ATL     8891\n",
+      "AUS     1428\n",
+      "AVL      142\n",
+      "BDL      268\n",
+      "BGR      221\n",
+      "BHM      148\n",
+      "BNA     3348\n",
+      "BOS    10279\n",
+      "BQN      473\n",
+      "BTV     1492\n",
+      "BUF     2787\n",
+      "BUR      204\n",
+      "BWI     1021\n",
+      "BZN       19\n",
+      "CAE       19\n",
+      "CAK      390\n",
+      "CHO       27\n",
+      "CHS     1566\n",
+      "CLE     2620\n",
+      "CLT     7836\n",
+      "CMH     1895\n",
+      "CRW       70\n",
+      "CVG     2045\n",
+      "DAY      767\n",
+      "DCA     5108\n",
+      "DEN     3947\n",
+      "       ...  \n",
+      "PIT     1666\n",
+      "PSE      180\n",
+      "PSP       12\n",
+      "PVD      177\n",
+      "PWM     1301\n",
+      "RDU     4376\n",
+      "RIC     1150\n",
+      "ROC     1413\n",
+      "RSW     2100\n",
+      "SAN     1610\n",
+      "SAT      402\n",
+      "SAV      393\n",
+      "SBN        6\n",
+      "SDF      605\n",
+      "SEA     2616\n",
+      "SFO     8232\n",
+      "SJC      204\n",
+      "SJU     3588\n",
+      "SLC     1618\n",
+      "SMF      132\n",
+      "SNA      573\n",
+      "SRQ      731\n",
+      "STL     2323\n",
+      "STT      348\n",
+      "SYR     1032\n",
+      "TPA     4347\n",
+      "TUL      101\n",
+      "TVC       60\n",
+      "TYS      271\n",
+      "XNA      536\n",
+      "Name: dest, Length: 104, dtype: int64\n",
+      "dest\n",
+      "ABQ    57.874016\n",
+      "ACK    60.377358\n",
+      "ALB    53.302961\n",
+      "ANC    37.500000\n",
+      "ATL    51.646820\n",
+      "AUS    58.548585\n",
+      "AVL    51.636364\n",
+      "BDL    60.496614\n",
+      "BGR    58.933333\n",
+      "BHM    49.831650\n",
+      "BNA    52.865940\n",
+      "BOS    66.281919\n",
+      "BQN    52.790179\n",
+      "BTV    57.628428\n",
+      "BUF    59.538560\n",
+      "BUR    54.986523\n",
+      "BWI    57.327344\n",
+      "BZN    52.777778\n",
+      "CAE    16.379310\n",
+      "CAK    45.138889\n",
+      "CHO    51.923077\n",
+      "CHS    54.299584\n",
+      "CLE    57.292806\n",
+      "CLT    55.716724\n",
+      "CMH    53.774120\n",
+      "CRW    50.724638\n",
+      "CVG    51.890383\n",
+      "DAY    50.295082\n",
+      "DCA    52.632664\n",
+      "DEN    54.321497\n",
+      "         ...    \n",
+      "PIT    57.947826\n",
+      "PSE    49.315068\n",
+      "PSP    63.157895\n",
+      "PVD    47.074468\n",
+      "PWM    55.314626\n",
+      "RDU    53.607742\n",
+      "RIC    46.862266\n",
+      "ROC    58.485099\n",
+      "RSW    59.372349\n",
+      "SAN    58.823529\n",
+      "SAT    58.600583\n",
+      "SAV    48.880597\n",
+      "SBN    60.000000\n",
+      "SDF    52.290406\n",
+      "SEA    66.683660\n",
+      "SFO    61.750806\n",
+      "SJC    62.006079\n",
+      "SJU    61.660079\n",
+      "SLC    65.585732\n",
+      "SMF    46.478873\n",
+      "SNA    69.454545\n",
+      "SRQ    60.363336\n",
+      "STL    53.537681\n",
+      "STT    66.666667\n",
+      "SYR    58.603066\n",
+      "TPA    58.223949\n",
+      "TUL    32.063492\n",
+      "TVC    59.405941\n",
+      "TYS    42.947702\n",
+      "XNA    51.737452\n",
+      "Name: dest, Length: 105, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No. of arrivals on each destination\n",
+    "arr_each_dest = flight_data.groupby('dest')['dest'].count()\n",
+    "print(type(arr_each_dest))\n",
+    "print(arr_each_dest)\n",
+    "\n",
+    "# Get flights which are arrived on or before time\n",
+    "ontime_flight_arr = flight_data[flight_data.arr_delay <= 0]\n",
+    "\n",
+    "# No. of on or before time arrival on each destination\n",
+    "ontime_arr_each_dest = ontime_flight_arr.groupby('dest')['dest'].count()\n",
+    "print(ontime_arr_each_dest)\n",
+    "\n",
+    "# % of on/before time arrival of flight on each destination\n",
+    "per_arr = (ontime_arr_each_dest/arr_each_dest)*100\n",
+    "print(per_arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Maximum number of flights headed to some particular destination**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dest\n",
+      "LEX        1\n",
+      "LGA        1\n",
+      "ANC        8\n",
+      "SBN       10\n",
+      "HDN       15\n",
+      "MTJ       15\n",
+      "EYW       17\n",
+      "PSP       19\n",
+      "JAC       25\n",
+      "BZN       36\n",
+      "CHO       52\n",
+      "MYR       59\n",
+      "TVC      101\n",
+      "ILM      110\n",
+      "CAE      116\n",
+      "CRW      138\n",
+      "EGE      213\n",
+      "MVY      221\n",
+      "ABQ      254\n",
+      "ACK      265\n",
+      "AVL      275\n",
+      "SMF      284\n",
+      "BHM      297\n",
+      "OAK      312\n",
+      "TUL      315\n",
+      "SJC      329\n",
+      "OKC      346\n",
+      "PSE      365\n",
+      "BUR      371\n",
+      "BGR      375\n",
+      "       ...  \n",
+      "MSY     3799\n",
+      "SEA     3923\n",
+      "CVG     3941\n",
+      "MDW     4113\n",
+      "STL     4339\n",
+      "CLE     4573\n",
+      "PHX     4656\n",
+      "BUF     4681\n",
+      "IAD     5700\n",
+      "SJU     5819\n",
+      "LAS     5997\n",
+      "BNA     6333\n",
+      "PBI     6554\n",
+      "MSP     7185\n",
+      "IAH     7198\n",
+      "DEN     7266\n",
+      "TPA     7466\n",
+      "RDU     8163\n",
+      "DFW     8738\n",
+      "DTW     9384\n",
+      "DCA     9705\n",
+      "MIA    11728\n",
+      "FLL    12055\n",
+      "SFO    13331\n",
+      "CLT    14064\n",
+      "MCO    14082\n",
+      "BOS    15508\n",
+      "LAX    16174\n",
+      "ATL    17215\n",
+      "ORD    17283\n",
+      "Name: dest, Length: 105, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No. of arrivals on each destination\n",
+    "arr_each_dest = flight_data.groupby('dest')['dest'].count()\n",
+    "print(arr_each_dest.sort_values())"
+   ]
   },
   {
    "cell_type": "code",
